Preparing basic API
